fix: panel top spacing

--- a/app/Views/errors/html/debug.css
+++ b/app/Views/errors/html/debug.css
@@ -71,7 +71,7 @@ p.lead {
     text-align: center;
     padding: calc(4px + 0.2083vw);
     width: 100%;
-    margin-top: -2.14rem;
+    margin-top: -2.16rem;
     position: fixed;
 }
 
